--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.0.7",
-    "gh-pages": "^3.1.0",
-    "gray-matter": "^4.0.2",
+    "gh-pages": "^3.2.3",
+    "gray-matter": "^4.0.3",
     "next": "10.0.7",
     "next-mdx-remote": "^2.1.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "sass": "^1.32.8"
+    "sass": "^1.35.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
-    "@types/react": "^17.0.2",
-    "autoprefixer": "^10.2.4",
-    "postcss": "^8.2.6",
-    "tailwindcss": "^2.0.3",
-    "typescript": "^4.2.2",
-    "webpack": "^5.24.4"
+    "@types/react": "^17.0.14",
+    "autoprefixer": "^10.3.0",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4",
+    "typescript": "^4.3.5",
+    "webpack": "^5.44.0"
   }
 }
